tests/ui/issues/issue-47094.stderr
error[E0566]: conflicting representation hints
  --> $DIR/issue-47094.rs:1:8
   |
LL | #[repr(C, u8)]
   |        ^  ^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #68585 <https://github.com/rust-lang/rust/issues/68585>
   = note: `#[deny(conflicting_repr_hints)]` (part of `#[deny(future_incompatible)]`) on by default

error[E0566]: conflicting representation hints
  --> $DIR/issue-47094.rs:8:8
   |
LL | #[repr(C)]
   |        ^
LL |
LL | #[repr(u8)]
   |        ^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #68585 <https://github.com/rust-lang/rust/issues/68585>

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0566`.
Future incompatibility report: Future breakage diagnostic:
error[E0566]: conflicting representation hints
  --> $DIR/issue-47094.rs:1:8
   |
LL | #[repr(C, u8)]
   |        ^  ^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #68585 <https://github.com/rust-lang/rust/issues/68585>
   = note: `#[deny(conflicting_repr_hints)]` (part of `#[deny(future_incompatible)]`) on by default

Future breakage diagnostic:
error[E0566]: conflicting representation hints
  --> $DIR/issue-47094.rs:8:8
   |
LL | #[repr(C)]
   |        ^
LL |
LL | #[repr(u8)]
   |        ^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #68585 <https://github.com/rust-lang/rust/issues/68585>
   = note: `#[deny(conflicting_repr_hints)]` (part of `#[deny(future_incompatible)]`) on by default

